--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ HW13/KotlinProject/.gradle
 HW13/KotlinProject/.idea
 HW13/KotlinProject/build
 HW13/KotlinProject/gradle
+HW13/KotlinProject/KotlinProject/build
+HW13/KotlinProject/KotlinProject/out
 HW13/WordPairCount/.gradle
 HW13/WordPairCount/.idea
 HW13/WordPairCount/build
