HW14: Init commit

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ HW13/WordPairCount/.gradle
 HW13/WordPairCount/.idea
 HW13/WordPairCount/build
 HW13/WordPairCount/gradle
+HW14/data
+HW14/MapReduceJoin/.gradle
+HW14/MapReduceJoin/.idea
+HW14/MapReduceJoin/build
+HW14/MapReduceJoin/gradle
