HW14: Сделана первая часть - выделение 10000 топ пар

--- a/HW14/MapReduceJoin/build.gradle
+++ b/HW14/MapReduceJoin/build.gradle
@@ -23,6 +23,9 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    // Hadoop dependencies
+    compile group: 'org.apache.hadoop', name: 'hadoop-common', version: '3.0.0'
+    compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: '3.0.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -31,4 +34,17 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin/'
+    test.java.srcDirs += 'src/test/kotlin/'
+}
+
+jar {
+    manifest {
+        attributes('Main-Class': 'MapReduceJoinKt')
+    }
+    archiveName 'MapReduceJoin.jar'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
