HW14: добавлен файл с 10000 топ пар за первый месяц

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ HW14/MapReduceJoin/.gradle
 HW14/MapReduceJoin/.idea
 HW14/MapReduceJoin/build
 HW14/MapReduceJoin/gradle
+HW14/result/part-r-00000
