--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@ HW14/MapReduceJoin/.gradle
 HW14/MapReduceJoin/.idea
 HW14/MapReduceJoin/build
 HW14/MapReduceJoin/gradle
+HW14/MapReduceJoin/out
 HW14/result/part-r-00000
