HW16: Init commit

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ HW14/MapReduceJoin/build
 HW14/MapReduceJoin/gradle
 HW14/MapReduceJoin/out
 HW14/result/part-r-00000
+HW16/KotlinSpark/.idea
+HW16/KotlinSpark/.gradle
+HW16/KotlinSpark/KotlinSpark.iml
+HW16/data
+HW16/stackoverflow
