--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ HW14/MapReduceJoin/out
 HW14/result/part-r-00000
 HW16/KotlinSpark/.idea
 HW16/KotlinSpark/.gradle
+HW16/KotlinSpark/build
 HW16/KotlinSpark/KotlinSpark.iml
 HW16/data
 HW16/stackoverflow
