HW16: переход на Scala проект

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,5 @@ HW16/KotlinSpark/.gradle
 HW16/KotlinSpark/build
 HW16/KotlinSpark/KotlinSpark.iml
 HW16/data
-HW16/stackoverflow
+HW16/ScalaSpark/.idea
+HW16/ScalaSpark/ScalaSpark.iml
