--- a/HW16/KotlinSpark/build.gradle
+++ b/HW16/KotlinSpark/build.gradle
@@ -23,6 +23,11 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    // Apache Spark
+    compile group: 'org.apache.spark', name: 'spark-core_2.11', version: '2.3.0'
+    compile group: 'org.apache.spark', name: 'spark-sql_2.11', version: '2.3.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -31,4 +36,17 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin/'
+    test.java.srcDirs += 'src/test/kotlin/'
+}
+
+jar {
+    manifest {
+        attributes('Main-Class': 'MainKt')
+    }
+    archiveName 'KotlinSpark.jar'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
