HW16: Скопирован код из лекции

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ HW16/KotlinSpark/KotlinSpark.iml
 HW16/data
 HW16/ScalaSpark/.idea
 HW16/ScalaSpark/ScalaSpark.iml
+HW16/ScalaSpark/project
+HW16/ScalaSpark/target
+HW16/ScalaProject/.idea
+HW16/ScalaProject/project/target
+HW16/ScalaProject/target
